tests/snapshots/examples_fixtures/errors__invalid_pattern_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_pattern_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match expressions must end with a `_` or identifier arm.

  --> examples/errors/invalid_pattern_error.flx:2:9
  |
2 | let x = match 1 {
  |         ^^^^^^^^^
3 |     _ -> 1,
  | ^^^^^^^^^^^
4 |     1 -> 2,
  | ^^^^^^^^^^^
5 | };
  | ^

Hint:
  Add a catch-all pattern: _ -> default_value


--> compiler error[E016]: INVALID PATTERN

Catch-all patterns must be the final match arm.

  --> examples/errors/invalid_pattern_error.flx:3:5
  |
3 |     _ -> 1,
  |     ^

Hint:
  Move `_` or the binding pattern to the last arm.

Found 2 errors.
== stdout ==
<not executed>
